Update exam results and dates in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>I B.Tech II Sem Results - JUNE 2025</title>
+  <title>II B.Tech I Sem Results - January 2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
 
   <h2 class="title">
     Vasireddy Venkatadri Institute of Technology (Autonomous)<br>
-    I B.Tech II Semester (R23) Regular Examinations, JUNE 2025 Results
+    II B.Tech I Semester (R23) Regular Examinations, January 2026 Results
   </h2>
 
   <div class="input-section">
@@ -22,7 +22,7 @@
   <div id="message" class="hidden"></div>
 
   <div class="note">
-    Note: Last date for Recounting/Revaluation/Challenge by Revaluation is 03-08-2025
+    Note: Last date for Recounting/Revaluation/Challenge by Revaluation is 09-02-2026
   </div>
 
   <div class="important">
