--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>II B.Tech I Sem Results - January 2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <img src="https://universityinnovation.org/images/e/e8/Vvitlogo.png" alt="VVIT Logo" class="logo">
